# pipa-dev-test

./: .gitignore  README.md  docker-compose.yml
api/: Dockerfile  README.md  api.py  pyproject.toml  settings.py  tox.ini
api/app/: __init__.py
api/app/banda/: hooks.py  model.py  tests.py  views.py
api/app/config/: settings.py
api/app/genero/: __init__.py  hooks.py  jobs.py  model.py  tests.py  views.py
api/app/pais/: __init__.py  countriesJson_ptBR.json  jobs.py  model.py  views.py
api/app/setlistfm/: views.py
frontend/: Dockerfile  package.json
frontend/src/: App.vue  main.js
frontend/src/components/layout/: Conteudo.vue  Menu.vue  Rodape.vue
frontend/src/components/pages/: Bandas.vue  Generos.vue  Info.vue
