[tool.poetry]
name = "api"
version = "0.1.0"
description = "api do desafio pipavida.com"
authors = ["Eduardo Medeiros Pereira <edu.medeirospereira@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
eve = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
